<resources>
    <string name="app_name">FRIDAY</string>
    <string name="full_name">Female Replacement Intelligent Digital Assistance Youth</string>
    <string name="cpu_init">0 CPUs / 0.0% / 0.0MHz</string>
    <string name="memory_init">0.0/0.0 MB</string>
    <string name="swap_init">0.0/0.0 MB</string>
    <string name="disk_init">0.0/0.0 GB</string>
    <string name="task_init">0/0</string>
    <string name="cpu_icon_desc">cpu icon</string>
    <string name="memory_icon_desc">memory icon</string>
    <string name="swap_icon_desc">swap icon</string>
    <string name="disk_icon_desc">disk icon</string>
    <string name="task_icon_desc">task icon</string>
    <string name="search_icon_desc">search icon</string>
    <string name="camera_icon_desc">camera icon</string>
    <string name="video_icon_desc">video icon</string>
    <string name="active_tasks_icon_desc">active tasks icon</string>
    <string name="star_icon_desc">star icon</string>
    <string name="gun_icon">gun icon</string>
    <string name="about_icon">about icon</string>
    <string name="live_feed_icon_desc">live feed icon</string>
    <string name="add_identity_icon_desc">add identity icon</string>
    <string name="image_icon_desc">image icon</string>
    <string name="folder_icon_desc">folder icon</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login_icon_desc">login icon</string>
    <string name="person_image">person image</string>
    <string name="person_name">person name</string>
    <string name="search_person_button">search person button</string>
    <string name="cancel_button_icon">cancel button icon</string>
    <string name="tick_icon">tick icon</string>
    <string name="cross_icon">cross icon</string>
    <string name="investigation_image">investigation image</string>
    <string name="face_image">face image</string>
    <string name="photo_missing">photo or thumbnail missing</string>
    <string name="task_thumbnail">task thumbnail</string>
    <string name="done_icon">done icon</string>
    <string name="tasks">tasks</string>
    <string name="no_tasks">No tasks found.</string>
    <string name="starred_persons">starred persons</string>
    <string name="tap_face">Tap a face to see the result.</string>
    <string name="no_face_match">No face match found.</string>
    <string name="about">Created by:\n Shivam Kushwaha \n theskushwaha@outlook.com</string>
    <string name="me_desc">me</string>
</resources>
