<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dullGreen"
    tools:context=".AboutActivity">

    <TextView
        style="@style/AppName"
        android:text="@string/app_name" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/green"
        android:textSize="15sp"
        android:textAlignment="center"
        android:text="@string/full_name"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/yellow_green_gradient_rectangle"
        android:padding="5dp"
        android:src="@drawable/me"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/me_desc"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textAlignment="center"
        android:text="@string/about"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

</LinearLayout>