<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/dullGreen"
    tools:context=".MainActivity">

    <TextView
        style="@style/AppName"
        android:text="@string/app_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">
            <ImageView
                style="@style/ProgressIcon"
                android:src="@drawable/cpu_icon"
                android:contentDescription="@string/cpu_icon_desc"/>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ProgressBar
                    android:id="@+id/pb_cpu"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="5dp"
                    style="@android:style/Widget.ProgressBar.Horizontal"
                    android:progressTint="@color/yellow"
                    android:progressBackgroundTint="@color/darkGreen"
                    android:indeterminate="false"
                    android:max="10000"/>
                <TextView
                    android:id="@+id/tv_cpu"
                    style="@style/ProgressBarText"
                    android:text="@string/cpu_init"/>
            </FrameLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">
            <ImageView
                style="@style/ProgressIcon"
                android:src="@drawable/memory_icon"
                android:contentDescription="@string/cpu_icon_desc"/>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ProgressBar
                    android:id="@+id/pb_memory"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="5dp"
                    style="@android:style/Widget.ProgressBar.Horizontal"
                    android:progressTint="@color/yellow"
                    android:progressBackgroundTint="@color/darkGreen"
                    android:indeterminate="false"
                    android:max="10000"/>
                <TextView
                    android:id="@+id/tv_memory"
                    style="@style/ProgressBarText"
                    android:text="@string/memory_init"/>
            </FrameLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">
            <ImageView
                style="@style/ProgressIcon"
                android:src="@drawable/swap_icon"
                android:contentDescription="@string/cpu_icon_desc"/>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ProgressBar
                    android:id="@+id/pb_swap"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="5dp"
                    style="@android:style/Widget.ProgressBar.Horizontal"
                    android:progressTint="@color/yellow"
                    android:progressBackgroundTint="@color/darkGreen"
                    android:indeterminate="false"
                    android:max="10000"/>
                <TextView
                    android:id="@+id/tv_swap"
                    style="@style/ProgressBarText"
                    android:text="@string/swap_init"/>
            </FrameLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">
            <ImageView
                style="@style/ProgressIcon"
                android:src="@drawable/disk_icon"
                android:contentDescription="@string/cpu_icon_desc"/>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ProgressBar
                    android:id="@+id/pb_disk"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="5dp"
                    style="@android:style/Widget.ProgressBar.Horizontal"
                    android:progressTint="@color/yellow"
                    android:progressBackgroundTint="@color/darkGreen"
                    android:indeterminate="false"
                    android:max="10000"/>
                <TextView
                    android:id="@+id/tv_disk"
                    style="@style/ProgressBarText"
                    android:text="@string/disk_init"/>
            </FrameLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">
            <ImageView
                style="@style/ProgressIcon"
                android:src="@drawable/task_icon"
                android:contentDescription="@string/cpu_icon_desc"/>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ProgressBar
                    android:id="@+id/pb_task"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="5dp"
                    style="@android:style/Widget.ProgressBar.Horizontal"
                    android:progressTint="@color/yellow"
                    android:progressBackgroundTint="@color/darkGreen"
                    android:indeterminate="false"
                    android:max="10000"/>
                <TextView
                    android:id="@+id/tv_task"
                    style="@style/ProgressBarText"
                    android:text="@string/task_init"/>
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:useDefaultMargins="true"
        android:padding="18dp"
        android:columnCount="4"
        android:layout_marginTop="20dp">
        <ImageButton
            style="@style/ImageButton"
            android:src="@drawable/active_tasks_icon"
            android:contentDescription="@string/active_tasks_icon_desc"
            android:onClick="launchTasksActivity"/>
        <ImageButton
            style="@style/ImageButton"
            android:src="@drawable/search_icon"
            android:contentDescription="@string/search_icon_desc"
            android:onClick="launchSearchPersonActivity"/>
        <ImageButton
            style="@style/ImageButton"
            android:src="@drawable/image_icon"
            android:contentDescription="@string/image_icon_desc"
            android:onClick="launchInvestigateImageActivity"/>
        <ImageButton
            style="@style/ImageButton"
            android:src="@drawable/video_icon"
            android:contentDescription="@string/video_icon_desc"
            android:onClick="launchVideoAnalysisActivity"/>
        <ImageButton
            style="@style/ImageButton"
            android:src="@drawable/star_icon"
            android:contentDescription="@string/star_icon_desc"
            android:onClick="launchStarredPersonsActivity"/>
        <ImageButton
            style="@style/ImageButton"
            android:src="@drawable/live_feed_icon"
            android:contentDescription="@string/live_feed_icon_desc"
            android:onClick="launchLiveFeedActivity"/>
        <ImageButton
            style="@style/ImageButton"
            android:src="@drawable/add_identity_icon"
            android:contentDescription="@string/add_identity_icon_desc"
            android:onClick="launchAddIdentityActivity"/>
        <ImageButton
            style="@style/ImageButton"
            android:src="@drawable/about_icon"
            android:contentDescription="@string/about_icon"
            android:onClick="launchAboutActivity"/>
    </GridLayout>

</LinearLayout>