<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/yellow_green_gradient_rectangle">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/iv_person_image"
            android:layout_width="116dp"
            android:layout_height="116dp"
            android:layout_margin="5dp"
            android:padding="4dp"
            android:background="@drawable/yellow_green_gradient_rectangle"
            android:scaleType="fitXY"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/person_image"/>
        <TextView
            android:id="@+id/tv_person_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxHeight="116dp"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_gravity="center"/>
        <ImageView
            android:id="@+id/iv_star_person"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/star_icon_desc"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    <TextView
        android:id="@+id/tv_person_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textSize="18sp"/>
    </ScrollView>

    <ImageButton
        android:id="@+id/ib_close_person_details"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:src="@drawable/cross_icon"
        android:scaleType="fitXY"
        android:layout_gravity="center_horizontal"
        android:background="@color/transparent"
        android:contentDescription="@string/cross_icon"/>

</LinearLayout>