<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/dullGreen"
    tools:context=".InvestigateImageActivity">
    <TextView
        android:id="@+id/tv_photo_missing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:textColor="@color/red"
        android:text="@string/photo_missing"
        android:visibility="invisible"/>
    <LinearLayout
        android:id="@+id/ll_detect_faces"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">
        <ImageView
            android:id="@+id/iv_investigation_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:contentDescription="@string/investigation_image"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="20dp">
            <ImageButton
                android:id="@+id/ib_finish_df"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/cross_icon"
                android:scaleType="fitXY"
                android:background="@color/dullGreen"
                android:contentDescription="@string/cross_icon"
                android:onClick="goBack"/>
            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <ProgressBar
                android:id="@+id/pb_detect_faces"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:visibility="invisible"/>
            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <ImageButton
                android:id="@+id/ib_detect_faces"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/tick_icon"
                android:scaleType="fitXY"
                android:background="@color/dullGreen"
                android:contentDescription="@string/tick_icon"
                android:onClick="detectFaces"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_recognize_faces"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="invisible">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/dullGreen">
            <GridLayout
                android:id="@+id/gl_faces"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="3"
                android:padding="28dp"
                android:useDefaultMargins="true"
                android:alignmentMode="alignBounds">
            </GridLayout>
        </ScrollView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="20dp">
            <ImageButton
                android:id="@+id/ib_finish_rf"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/cross_icon"
                android:scaleType="fitXY"
                android:background="@color/dullGreen"
                android:contentDescription="@string/cross_icon"
                android:onClick="goBack"/>
            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <ProgressBar
                android:id="@+id/pb_recognize_faces"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:visibility="invisible"/>
            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <ImageButton
                android:id="@+id/ib_recognize_faces"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/tick_icon"
                android:scaleType="fitXY"
                android:background="@color/dullGreen"
                android:contentDescription="@string/tick_icon"
                android:onClick="recognizeFaces"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>